<resources>
    <string name="app_name">eMarketGo</string>
    <string name="menu_bottom_action_home">Home</string>
    <string name="menu_bottom_action_history">History</string>
    <string name="menu_bottom_action_profile">Profile</string>
    <string name="fragment_profile_edit_profile">Edit Profile</string>
    <string name="fragment_profile_all_history">All History</string>
    <string name="fragment_profile_help">Help</string>
    <string name="fragment_profile_about">About</string>
    <string name="fragment_profile_log_out">Log-out</string>
    <string name="fragment_profile_username">tansang752</string>
    <string name="fragment_profile_full_name">Bui Tan Sang</string>
    <string name="fragment_profile_arrow_button">arrow_button</string>
    <string name="fragment_profile_edit_button">edit_button</string>
    <string name="fragment_home_my_balance">My Balance</string>
    <string name="fragment_home_money">$34.234.00</string>
    <string name="fragment_home_top_up">Top Up</string>
    <string name="fragment_home_2_hrs">2 Hrs</string>
    <string name="fragment_home_order_status">Processed at sort facility</string>
    <string name="fragment_home_service_and_product">Service and Product</string>
    <string name="fragment_home_others">Others</string>
    <string name="fragment_home_wallet">Wallet</string>
    <string name="fragment_home_help_center">Help Center</string>
    <string name="fragment_home_order">Order</string>
    <string name="fragment_home_nearby_drop">Nearby Drop</string>
    <string name="fragment_home_check_rates">Check Rates</string>
    <string name="fragment_home_enter_track_number">Enter track number</string>
    <string name="fragment_order_detail_top_bar_title">Order Details</string>
    <string name="fragment_history_title">All History</string>
    <string name="order_status_all">All</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_status_on_process">On Process</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="history_search_results">4 Results</string>
    <string name="order_id">MM09132005</string>
    <string name="fragment_home_e_title">E</string>
    <string name="fragment_home_market_go_title">MarketGo</string>
    <string name="fragment_home_features">Features</string>
    <string name="fragment_order_detail_name">Name</string>
    <string name="fragment_order_detail_quantity">Quantity</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="activity_location_locate_button">Go Shipping</string>
    <string name="activity_location_done_order">Done this order</string>
    <string name="activity_map_top_bar_title">Your location</string>
    <string name="bottom_sheet_location_title">Order Detail</string>
    <string name="location_confirm_button">Confirm</string>
    <string name="menu_map_refresh">Refresh</string>
    <string name="fragment_order_details_button_take_item">Take this order now!</string>
    <string name="fragment_order_details_button_check_order">Check this order now!</string>
</resources>