<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".views.fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="306dp"
        android:orientation="vertical"
        android:background="@color/light_mode_blue"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_rectangle"
            android:layout_gravity="center_vertical"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_left_rectangle"
            android:layout_gravity="center_vertical"
            />



        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:layout_gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_e_title"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:layout_marginEnd="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_market_go_title"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification"
            android:layout_gravity="center_vertical"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_marginTop="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_my_balance"
                    android:textColor="@color/gray_900"
                    android:textSize="12sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_my_balance"
                    android:text="@string/fragment_home_money"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_top_up"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="center"

                    />
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_square"
                    android:layout_gravity="end"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:layout_marginTop="230dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background_orange"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center_vertical"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_normal"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_home_enter_track_number"
                android:textSize="13sp"
                android:inputType="number"
                android:layout_weight="0.8"
                />
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_scan"
                android:layout_weight="0.2"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"

        >
        <TextView
            android:padding="10dp"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_home_features"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="25dp"
                android:paddingTop="25dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/item_feature_background_border"
                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_dollar"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_check_rates"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="25dp"
                android:paddingTop="25dp"
                android:layout_marginHorizontal="8dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:background="@drawable/item_feature_background_border"
                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_nearby_drop"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_nearby_drop"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="25dp"
                android:paddingTop="25dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/item_feature_background_border"
                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_order"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/fragment_home_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_order"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="25dp"
                android:paddingTop="25dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/item_feature_background_border"
                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_help_center"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_help_center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="25dp"
                android:paddingTop="25dp"
                android:layout_marginHorizontal="8dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:background="@drawable/item_feature_background_border"
                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wallet"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_wallet"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="25dp"
                android:paddingTop="25dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/item_feature_background_border"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/ic_others" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_others"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_home_service_and_product"/>

        <LinearLayout
            android:id="@+id/ll_orders_container"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>
    </LinearLayout>


</ScrollView>