<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:strokeWidth="0dp">

        <LinearLayout
                        android:id="@+id/ll_order_item"
                        android:padding="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/item_feature_background_border"
                        >

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_order_tracking" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center"
                            >

                            <TextView
                                android:id="@+id/order_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/order_id"/>

                            <TextView
                                android:id="@+id/order_status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/gray_900"
                                android:text="@string/fragment_home_order_status"/>


                        </LinearLayout>

                        <TextView
                            android:id="@+id/order_time"
                            android:layout_marginEnd="10dp"
                            android:textAlignment="textEnd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gray_900"
                            android:layout_gravity="center"
                            android:text="@string/fragment_home_2_hrs"/>
                    </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
